carousel fading resolved moved all css carousel properties from bootstrap. css to style.css not just some as previously which caused transition to be broken, with visible background

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5680,7 +5680,7 @@ fieldset:disabled .btn {
 	padding: 1rem 1rem;
 	color: #212529;
 }
-.carousel {
+/* .carousel {
 	position: relative;
 }
 .carousel.pointer-event {
@@ -5703,6 +5703,7 @@ fieldset:disabled .btn {
 	display: none;
 	float: left;
 	width: 100%;
+	height: 100%;
 	margin-right: -100%;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -5862,7 +5863,7 @@ fieldset:disabled .btn {
 }
 .carousel-dark .carousel-caption {
 	color: #000;
-}
+} */
 @-webkit-keyframes spinner-border {
 	to {
 		transform: rotate(360deg);
